Update README.md
Updated readme to give updated running instructions.